--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -9,7 +9,7 @@ jobs:
     name: dist
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     uses: ./.github/workflows/build-boards.yml
     with:
       board-set: all
